--- a/Builds/Production/manifest.plist
+++ b/Builds/Production/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/xwmszqhf1ie7k1p/chillr.ipa</string>
+					<string>https://chillrdev.github.io/beta-ios/Production/chillr.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/q9mbrgzzmkxiata/icon.png</string>
+					<string>https://chillrdev.github.io/beta-ios/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/q9mbrgzzmkxiata/icon.png</string>
+					<string>https://chillrdev.github.io/beta-ios/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -31,7 +31,7 @@
 				<key>bundle-identifier</key>
 				<string>com.backwaters.chillr</string>
 				<key>bundle-version</key>
-				<string>1.17</string>
+				<string>2.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
