--- a/Builds/Staging/manifest.plist
+++ b/Builds/Staging/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/98ts30aiuzdmn76/chillr.ipa</string>
+					<string>https://chillrdev.github.io/beta-ios/Staging/chillr.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/q9mbrgzzmkxiata/icon.png</string>
+					<string>https://chillrdev.github.io/beta-ios/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://dl.dropboxusercontent.com/s/q9mbrgzzmkxiata/icon.png</string>
+					<string>https://chillrdev.github.io/beta-ios/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
